--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@ Nama lengkap	: Ekalaya Kemal
 Nomor		: 18
 Alamat		: Jl. Kusumanegara, UH II/1006, 34/10, Muja - Muju, Umbulharjo, Yogyakarta
 Kelas		: 12 SIJA A
-Cita - cita	: Financial Freedom
+Cita - cita	: Financial Freedom, punya rumah yang ada backyardnya di west coast/midwest US
+		  bisa barbeque an tiap hari tanpa mikir kerjaan. Merem aja dapet duit.
+			
