--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ Nomor		: 18
 Alamat		: Jl. Kusumanegara, UH II/1006, 34/10, Muja - Muju, Umbulharjo, Yogyakarta
 Kelas		: 12 SIJA A
 Cita - cita	: Financial Freedom, punya rumah yang ada backyardnya di west coast/midwest US
-		  bisa barbeque an tiap hari tanpa mikir kerjaan. Merem aja dapet duit.
+		  bisa barbeque an di backyard tiap hari tanpa mikir kerjaan. 
+		  Merem aja dapet duit.
 			
